<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaInicialActivity">

    <TextView
        android:id="@+id/tvtitulo"
        android:layout_width="333sp"
        android:layout_height="88sp"
        android:layout_marginBottom="120sp"
        android:layout_marginEnd="26sp"
        android:layout_marginLeft="26sp"
        android:layout_marginRight="26sp"
        android:layout_marginStart="26sp"
        android:layout_marginTop="69sp"
        android:gravity="center_horizontal"
        android:text="@string/app_title"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#737373"
        android:textSize="35sp"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/tvcreditos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvcreditos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56sp"
        android:gravity="center_horizontal"
        android:text="@string/app_credit"
        app:layout_constraintBottom_toTopOf="@+id/btinsere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitulo" />

    <Button
        android:id="@+id/btinsere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116sp"
        android:layout_marginEnd="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginStart="20sp"
        android:text="@string/label_insertPerson"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcreditos" />

</android.support.constraint.ConstraintLayout>